gcc/testsuite/g++.dg/other/pr84792-1.C
struct A {};

typedef struct
{
  virtual void foo() {}
} A::B;  // { dg-error "3:typedef" }
